fixed disappearing arrow on mobile view

--- a/src/components/About.css
+++ b/src/components/About.css
@@ -15,8 +15,15 @@
   color: #a8a8a8;
 }
 
+.mobileArrow {
+  display: none;
+}
+
 @media (max-width: 700px) {
   .dots {
     display: none;
+  }
+  .mobileArrow{
+    display: contents;
   }
 }
