--- a/src/components/Project.css
+++ b/src/components/Project.css
@@ -42,9 +42,16 @@
   }
 }
 
+.mobileArrow {
+  display: none;
+}
+
 @media (max-width: 700px) {
   .dots {
     display: none;
+  }
+  .mobileArrow{
+    display: contents;
   }
 }
 
