--- a/src/components/Tech.css
+++ b/src/components/Tech.css
@@ -14,8 +14,15 @@
   flex-wrap: wrap;
 }
 
+.mobileArrow {
+  display: none;
+}
+
 @media (max-width: 700px) {
   .dots {
     display: none;
+  }
+  .mobileArrow{
+    display: contents;
   }
 }
